доработла код по выводу списка комментариев

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
           </div>
 
           <!-- Комментарии к изображению -->
-          <div class="social__comment-count hidden">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count"><span class="showing-count">5</span> из <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
           </ul>
 
           <!-- Кнопка для загрузки новой порции комментариев -->
-          <button type="button" class="social__comments-loader  comments-loader hidden">Загрузить еще</button>
+          <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
 
           <!-- Форма для отправки комментария -->
           <div class="social__footer">
